# virtual_6dof

./: CMakeLists.txt  README.md  bug.md  package.xml  test.sh
config/: virtual_6dof_controllers.yaml  virtual_6dof_controllers_p1.yaml  virtual_6dof_controllers_p2.yaml  virtual_6dof_controllers_shared.yaml  virtual_6dof_publisher.perspective
example/: demo.launch  demo.xacro  dual_demo.launch  dual_demo.xacro
launch/: launch_virtual_6dof.launch  virtual_6dof_control.launch
rviz/: result.rviz
scripts/: gen_controllers_yaml.py
src/: virtual_6dof_control_node.cpp
urdf/: vehicle_with_external_radar.xacro  virtual_6dof.xacro
